#39 新增webbrowser plugins 1、调整新开网页默认界面

--- a/tool/web_browser_plugins/newtab.css
+++ b/tool/web_browser_plugins/newtab.css
@@ -1,5 +1,16 @@
 a
 {
     font-size:20px;
-    margin-left:20px
+    margin-left:30px;
+    text-decoration-line:none;
+}
+
+a:visited
+{
+    color:darkblue
+}
+
+a:hover
+{
+    color:coral
 }
